// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`CsvEntry calls handle csv blur 1`] = `
<div
  className="csv-entry-wrapper"
>
  <div
    className="help-button"
  >
    <ToolTip
      displayText={
        <button
          aria-label="Open help text"
          className="item-nav-btn btn btn-default btn-sm about-item-btn"
          role="button"
        >
          <span
            aria-hidden="true"
            className="fa fa-info-circle"
          />
          Help
        </button>
      }
      helpText={
        <p>
          Enter namespace, bank key, item id, and section for the namespace which has a bank key. Or,
          <br />
          Enter namespace, item id, and section for the namespace which doesn't have a bank key.
        </p>
      }
    />
  </div>
  <textarea
    className="csv-text-entry"
    onBlur={[Function]}
    onChange={[Function]}
  />
</div>
`;

exports[`CsvEntry calls handle csv change 1`] = `
<div
  className="csv-entry-wrapper"
>
  <div
    className="help-button"
  >
    <ToolTip
      displayText={
        <button
          aria-label="Open help text"
          className="item-nav-btn btn btn-default btn-sm about-item-btn"
          role="button"
        >
          <span
            aria-hidden="true"
            className="fa fa-info-circle"
          />
          Help
        </button>
      }
      helpText={
        <p>
          Enter namespace, bank key, item id, and section for the namespace which has a bank key. Or,
          <br />
          Enter namespace, item id, and section for the namespace which doesn't have a bank key.
        </p>
      }
    />
  </div>
  <textarea
    className="csv-text-entry"
    onBlur={[Function]}
    onChange={[Function]}
    value="hello"
  />
</div>
`;

exports[`CsvEntry matches snapshot 1`] = `
<div
  className="csv-entry-wrapper"
>
  <div
    className="help-button"
  >
    <ToolTip
      displayText={
        <button
          aria-label="Open help text"
          className="item-nav-btn btn btn-default btn-sm about-item-btn"
          role="button"
        >
          <span
            aria-hidden="true"
            className="fa fa-info-circle"
          />
          Help
        </button>
      }
      helpText={
        <p>
          Enter namespace, bank key, item id, and section for the namespace which has a bank key. Or,
          <br />
          Enter namespace, item id, and section for the namespace which doesn't have a bank key.
        </p>
      }
    />
  </div>
  <textarea
    className="csv-text-entry"
    onBlur={[Function]}
    onChange={[Function]}
  />
</div>
`;
